fix(LoginController): deleted token from response
